src/objects/Lead.object
<CustomObject>
    <fields>
        <fullName>Additional_Parent_City__c</fullName>
        <description>Additional parent/guardian city.</description>
        <label>Additional Parent City</label>
        <length>250</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Email__c</fullName>
        <description>Its store the additional parent/Guardian email from the wish referral form.</description>
        <label>Additional Parent Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_First_Name__c</fullName>
        <description>It&apos;s store the Additional Parent/Guardian First Name.</description>
        <label>Additional Parent First Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Last_Name__c</fullName>
        <description>Its store the Additional Parent/Guardian Last Name.</description>
        <label>Additional Parent Last Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Phone__c</fullName>
        <description>Its store the additional parent/guardian phone number.</description>
        <label>Additional Parent Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Postal_Code__c</fullName>
        <description>Its Store the Additional Parent postal code from the wish referral form.</description>
        <label>Additional Parent Postal Code</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Primary__c</fullName>
        <description>Primary language of the wish additional parent/guardian.</description>
        <label>Additional Parent Primary Language</label>
        <picklist>
            <picklistValues>
                <fullName>English</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Spanish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Sign Language</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arabic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chinese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>French and French Creole</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>German</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hindi</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Italian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Japanese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Korean</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Polish</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Portuguese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Russian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tagalog</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Vietnamese</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Relationship_to_Child__c</fullName>
        <label>Additional Parent Relationship to Child</label>
        <picklist>
            <picklistValues>
                <fullName>Father</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guardian</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepmother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepfather</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepsister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Stepbrother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Sister</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Half Brother</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aunt</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Uncle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cousin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Husband</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wife</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Partner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Neighbour</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Coworker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Son</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Daughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandson</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Grandaughter</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Employee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_State__c</fullName>
        <description>Additional parent/guardian state.</description>
        <label>Additional Parent State</label>
        <picklist>
            <picklistValues>
                <fullName>Alabama</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Alaska</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arizona</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Arkansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Americas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Europe</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armed Forces Pacific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>California</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Colorado</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Connecticut</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delaware</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>District of Columbia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Federated Micronesia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Florida</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Georgia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Guam</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hawaii</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Idaho</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Illinois</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Indiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Iowa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kansas</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Kentucky</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Louisiana</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maine</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Marshall Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Maryland</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Massachusetts</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Michigan</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Additional_Parent_Street__c</fullName>
        <description>It&apos;s store the Additional Parent/Guardian street.</description>
        <label>Additional Parent Street</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AddressVerificationAttempted__c</fullName>
        <inlineHelpText>Last time USPS verification was attempted</inlineHelpText>
        <label>Address Verification Attempted</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>AddressVerified__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>USPS Verified</inlineHelpText>
        <label>Address Verified</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Angina__c</fullName>
        <description>It will hold the value of angina travel algorithm.</description>
        <label>Hidden Angina</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Any_medical_reason_for_moving_quickly__c</fullName>
        <description>Is there a medical reason why we need to move quickly?</description>
        <inlineHelpText>Is there a medical reason why we need to move quickly?</inlineHelpText>
        <label>Any Medical Reason For Moving Quickly?</label>
        <length>256</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Are_Other_Diagnosis_Eligible_For_Wish__c</fullName>
        <description>it will hold information about is there are any other diagnosis for wish eligibility</description>
        <label>Are Other Diagnosis Eligible For Wish?</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Arrhythmia__c</fullName>
        <description>it will hold the value of Arrhythmia Travel Algorithm.</description>
        <label>Hidden Arrhythmia</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Best_Contact_for_Physician_First_Name__c</fullName>
        <description>It holds the Best Contant Person Firstname.</description>
        <label>Best Contact for Physician First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_Contact_for_Physician_Last_Name__c</fullName>
        <description>It holds the Best Contant Person Lastname.</description>
        <label>Best Contact for Physician Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Best_contact_for_Physician_Email__c</fullName>
        <description>It holds the Best contact for Physician Email</description>
        <label>Best contact for Physician Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ChapterName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>It  associate with Chapter.</description>
        <label>Chapter Name</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Leads</relationshipLabel>
        <relationshipName>Leads</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Chapter_Name__c</fullName>
        <description>This Field hold the name of the state.</description>
        <formula>&apos;Make-A-Wish &apos;+State</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Chapter Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_Age__c</fullName>
        <description>It would capture the child of the age.</description>
        <label>Child Age</label>
        <picklist>
            <picklistValues>
                <fullName>Under 2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2.5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>7</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>8</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>9</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18 &amp; Above</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Child_Middle_Initial__c</fullName>
        <description>It will hold the Child Middle name details</description>
        <label>Child Middle Initial</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Child_will_ultimately_die_prematurely__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a condition for which there is no reasonable hope of cure and from which children or young people will ultimately die prematurely.</description>
        <inlineHelpText>Wish Child has a condition for which there is no reasonable hope of cure and from which children or young people will ultimately die prematurely. (e.g., Duchenne muscular dystrophy or neurodegenerative disease)</inlineHelpText>
        <label>Child Will Ultimately Die Prematurely</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Childs_Qualifying_Diagnosis__c</fullName>
        <description>This field will hold the Child&apos;s Qualifying Diagnosis of the Wish Kid</description>
        <label>Child&apos;s Qualifying Diagnosis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Chronic_Heart_Failure__c</fullName>
        <description>It will hold the value of Chronic Heart Failure Travel Algorithm value.</description>
        <label>Hidden Chronic Heart Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Chronic_Hepatitis__c</fullName>
        <description>It will hold the Travel Algorithm additional question values.</description>
        <label>Hidden Chronic Hepatitis</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Closed_Date__c</fullName>
        <description>When DNQ-Task has been closed, this field will be entered by chapter staff manually.</description>
        <inlineHelpText>Date the wish is financially closed out.</inlineHelpText>
        <label>Closed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Communication__c</fullName>
        <description>It will hold which type of communication can understand by child</description>
        <label>Communication</label>
        <picklist>
            <picklistValues>
                <fullName>This child is non-verbal</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child is developmentally on target for chronological age</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 0-2 year old, Sensorimotor stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 2-7 year old, Preoperational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at a 7-11 year old, Concrete Operational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>This child functions at an 11+ year old, Formal Operational stage</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>I am not sure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chronological age</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>MultiselectPicklist</type>
    </fields>
    <fields>
        <fullName>Congenital_Heart_Disease__c</fullName>
        <description>It will hold the value of Travel Algorithm&apos;s Congenital_Heart_Disease value.</description>
        <label>Hidden Congenita Heart Disease</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Contact_Dup_Check__c</fullName>
        <description>Hidden field for checking contact dup</description>
        <label>Hidden Contact Dup Check</label>
        <picklist>
            <picklistValues>
                <fullName>Block Contact Dup</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Convulsive_Disorders__c</fullName>
        <description>It will hold the value of Conclusive Disorder&apos;s Travel Algorithm.</description>
        <label>Hidden Convulsive Disorders</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Copy_1_DNQ_Date__c</fullName>
        <formula>DNQ_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - DNQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Copy_1_Lead_Referred_Date__c</fullName>
        <formula>Referred_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Copy 1 - Lead Referred Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>County__c</fullName>
        <inlineHelpText>County/Parish/Borough</inlineHelpText>
        <label>County</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_Date_Time__c</fullName>
        <description>It will hold the lead created date and time.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Created Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Current_Condition_Label__c</fullName>
        <description>Wish Current Condition Label</description>
        <label>Current Condition Label</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Current_Condition__c</fullName>
        <description>It Store the travel recommendation detail.</description>
        <label>Travel Recommendation</label>
        <length>131000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>DB_Created_Date_without_Time__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>CreatedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Created Date without Time</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DB_Lead_Age__c</fullName>
        <description>This is a field that is installed by and used with the Adoption Dashboard AppExchange package. If your org already has a similar field, you can change the reports that are part of the Adoption Dashboard package to use your custom field and then delete this field.</description>
        <formula>NOW() - LastModifiedDate</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>DB Lead Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>DNQ_Date__c</fullName>
        <description>It Capture the DNQ Date</description>
        <label>DNQ Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>DOB__c</fullName>
        <description>This field holds the DOB details of the Wish Kid</description>
        <label>DOB</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Debilitation_may_extend_over_many_years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years.</description>
        <inlineHelpText>Wish Child has a progressive condition without curative treatment options in which debilitation may extend over many years. (e.g., neurodegenerative, severe treatment resistant epilepsy, metabolic disease)</inlineHelpText>
        <label>Debilitation May Extend Over Many Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Diagnosis_Pending_Days__c</fullName>
        <description>It hold number of days still lead in diagnosis verification status.</description>
        <label>Diagnosis Pending Days</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dup_Check__c</fullName>
        <description>This hidden field used in lead duplicate page.</description>
        <label>Hidden Dup Check</label>
        <picklist>
            <picklistValues>
                <fullName>Block Lead Dup</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>External_Id__c</fullName>
        <description>It holds the value of External Id</description>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>50</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>From_Mulesoft__c</fullName>
        <defaultValue>false</defaultValue>
        <description>It indicated the record is created by manually or from mulesoft.</description>
        <label>From Mulesoft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <description>This field holds the Gender information of the Wish Kid</description>
        <label>Gender</label>
        <picklist>
            <picklistValues>
                <fullName>Male</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Female</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Has_this_child_ever_received_prior_wish__c</fullName>
        <description>Has this child ever received a prior wish from MAW or any other wish granting organization?</description>
        <inlineHelpText>Has this child ever received a prior wish from MAW or any other wish granting organization?</inlineHelpText>
        <label>Has This Child Ever Received Prior Wish?</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Heart_Failure__c</fullName>
        <description>It will hold the value of Heart_Failure travel algorithm.</description>
        <label>Hidden Heart Failure</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Hidden_Additional_Parent_Id__c</fullName>
        <description>It will hold the value contact id of Wish Family.</description>
        <label>Hidden Additional Parent Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Best_Contact_Person_Id__c</fullName>
        <description>It will hold the id of best contact person in physician office</description>
        <label>Hidden Best Contact Person Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_DV_form_Medical_professional_Type__c</fullName>
        <description>It hold the type of medical professional for receiving DV form.</description>
        <label>Hidden DV form Medical professional Type</label>
        <picklist>
            <picklistValues>
                <fullName>Treating Medical Professional</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Best contact for Physician</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Hidden_Medical_Professional_Name__c</fullName>
        <description>holding Medical Professional Name.</description>
        <formula>Treating_Medical_Professional_First_Name__c +  Treating_Medical_Professional_Last_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Medical Professional Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Question1__c</fullName>
        <description>This field is used to store the value of question value from PartA form</description>
        <label>Hidden Question1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hidden_Wish_Child_Last_Initial__c</fullName>
        <formula>LEFT( LastName , 1)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Hidden Wish Child Last Initial</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Treatment_Facility_Treating__c</fullName>
        <description>It holds the information about Hospital/Treatment Facility of the wish kid</description>
        <label>Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hospital_Treatment_Facility__c</fullName>
        <description>This field will hold the details of the Hospital/Treatment Facility for the Wish Kid</description>
        <label>Hospital/Treatment Facility</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>How_Did_you_hear_about_Make_A_Wish__c</fullName>
        <description>It hold the answer of How_Did_you_hear_about_Make_A_Wish? question from the referral form.</description>
        <label>How Did you hear about Make-A-Wish?</label>
        <picklist>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Family Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Friend</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure at the Doctor&apos;s Office</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Event</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make-A-Wish Hospital Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Make-A-Wish Staff/Volunteer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Newspaper</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other Make-A-Wish Family</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Radio</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School – Kids For Wish Kids</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>School – Nurse/Teacher</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Support Group</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Television</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web Search</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brochure at doctor’s office</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Doctor</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Family</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Friends</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Media/PSA</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <picklistValues>
                <fullName>Other Wish Family</fullName>
                <isActive>false</isActive>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_am_Recognized_To_Practice_As_a__c</fullName>
        <description>It will hold which type of practice she/he is going to get</description>
        <label>I Am Recognized To Practice As A</label>
        <picklist>
            <picklistValues>
                <fullName>Physician</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse Practitioner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Physician Assistant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Nurse</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Social Worker</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Child Life Specialist</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>I_m_Part_of_The_Treating_HealthCare_Team__c</fullName>
        <description>This field will identify whether he/she is part of the treating health care team or not</description>
        <label>I&apos;m Part Of The Treating HealthCare Team</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>